--- a/.github/workflows/extract-logs.yml
+++ b/.github/workflows/extract-logs.yml
@@ -2,8 +2,8 @@ name: Extract Slack Logs
 
 on:
   schedule:
-    # 週に2回実行: 月曜日と木曜日の午前3時（UTC）
-    - cron: '0 3 * * 1,4'
+    # 毎週水曜日の午前3時（UTC）に実行（日本時間では水曜日の正午12時）
+    - cron: '0 3 * * 3'
   workflow_dispatch:  # 手動実行も可能
 
 jobs:
