--- a/config.yaml
+++ b/config.yaml
@@ -2,8 +2,9 @@
 
 # スキップするチャンネル（IDまたは名前）
 skip_channels:
-  - 2_開発_いどばた_github
-  - 2_開発_広聴ai_github
+  - C08JQERPAJ2 # 8_開発_いどばた_github
+  - C08JQEUR79U # 8_開発_広聴ai_github
+  - C08PRQVQWSE # 8_devinと人間たちの部屋
 
 # 自動参加設定
 auto_join: true
